--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,9 +38,14 @@ dependencies = [
     "qq-botpy>=1.0.0",
     "python-socks[asyncio]>=2.4.0",
     "aiohttp>=3.9.0",
+    "psycopg[pool]>=3.3.2",
 ]
 
 [project.optional-dependencies]
+postgres = [
+    "psycopg[binary]>=3.1.0",
+    "psycopg-pool>=3.1.0",
+]
 dev = [
     "pytest>=7.0.0",
     "pytest-asyncio>=0.21.0",
